# helloFlask

./: README.md  pyproject.toml
helloFlask/: helloFlask.py  process_db.py  support.py
helloFlask/databases/: db_commentary.db
helloFlask/templates/: _navigation.html  about.html  base.html  generated.html  generateur.html  index.html  prenom.html  visualise.html
