[tool.poetry]
name = "helloflask"
version = "0.1.0"
description = ""
authors = ["raphael_campus <raphael.bouvet@le-campus-numerique.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"
pip = "^22.2.2"
pandas = "^1.4.3"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
